tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__AdeptThaumaturgy-AAAAAAAAAAAAAAAAAAAAFw==__DidYouWanttoKnow-AAAAAAAAAAAAAAAAAAAEHw==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 1055,
  "prerequisites": [
    260
  ],
  "properties": {
    "auto_claim": false,
    "desc": "After a few forbidden researches your warp level has increased a bit. Do you want to know how much warp you have?\n\nCraft some litmus paper to print out the warp level.",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "Did You Want to Know Your Warp Level?",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    260
  ],
  "rewards": [],
  "tasks": []
}
