tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__AdeptThaumaturgy-AAAAAAAAAAAAAAAAAAAAFw==__Disenchanted-AAAAAAAAAAAAAAAAAAAIFA==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 2068,
  "prerequisites": [
    266
  ],
  "properties": {
    "auto_claim": false,
    "desc": "If you found an item or book with a good enchantment - but also a bunch of garbage, you can strip the enchantments into separate books using a Disenchanter. Surround it with bookcases to reduce damage done to the item.",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "Disenchanted ",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    266
  ],
  "rewards": [],
  "tasks": []
}
