tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__AdeptThaumaturgy-AAAAAAAAAAAAAAAAAAAAFw==__DynamismTablets-PFguzsBlTrKLXNv9miH-xg==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 13863573556927004358,
  "prerequisites": [
    260
  ],
  "properties": {
    "auto_claim": false,
    "desc": "The Dynamism tablet is a block that simulates the functionality of a left and right-click autoclicker. It can be obtained fairly early in the game (early-mid MV), and is a useful tool for simple automation.\n\nUpon placing, the tablet will target the block that it's facing (the direction is indicated by a small dot on the overlay) and will start once you give it an item in its slot. If it holds a block/seed/sapling, it can also place it on the block below it.\n\nIt can be configured to either left/right click and also has an option to only be active when it receives a redstone signal. Hoppers or item pipes of any sort also allow the tablet to receive items.\n\nNote that some special mob drops or special interactions (like BM sacrificial knife) are disabled for the Dynamism tablet. However, they do work with Tinkers Tools.\n\n[note]This item has received a rework in 2.8 and has had most of its bugs fixed. If you still encounter any bugs, feel free to report it on our GitHub page or discord server.[/note]",
    "global_share": false,
    "icon": null,
    "is_global": null,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "Dynamism Tablets",
    "party_single_reward": null,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    260
  ],
  "rewards": [],
  "tasks": []
}
