tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__AdeptThaumaturgy-AAAAAAAAAAAAAAAAAAAAFw==__FoolsGold-AAAAAAAAAAAAAAAAAAAJaw==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 2411,
  "prerequisites": [
    879
  ],
  "properties": {
    "auto_claim": false,
    "desc": "After holding a Primal Charm for a while, you suddenly understand some of its whispers! It tells of a land filled with untold riches, just waiting for someone to claim them. You scoff at the claim, but apparently if you \"Open the Eye\" and create a very fancy carved stone, you can create a portal there. But this eye it speaks of...just what is it? Maybe by delving into the darker realm of magic...bah! Only fools would believe such nonsense.",
    "global_share": false,
    "icon": null,
    "is_global": null,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "Fool's Gold",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    879
  ],
  "rewards": [],
  "tasks": []
}
