tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__AdeptThaumaturgy-AAAAAAAAAAAAAAAAAAAAFw==__GenXXXXXXXXXX-AAAAAAAAAAAAAAAAAAAJbA==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 2412,
  "prerequisites": [
    280
  ],
  "properties": {
    "auto_claim": false,
    "desc": "Yes! Yes! The eyes! You understand now, it is all too clear! The land of riches, it is yours! But what is this? It's empty? Why, where have your Riches gone? The sole inhabitant tells you that all such things have faded away long ago, with the End of Time at hand...But that simply means you're in the right PLACE after all! You're simply in the wrong TIME. If you simply adjust the portal a little, you can arrive at the right PLACE and TIME to get your well-deserved Riches. You suspect that such an adjustment would require something strong...INFINITELY strong.\n\nIn the meantime you now have a very very big closet to store your things in once the old owner...moves out. Upon leaving, you spot a tiny Ghast, surely just your imagination? Unfortunately the shifting of time causes you to end up in what is likely wilderness when you leave. (Exiting through the portal sends you back to the world spawn)\n\nIn order to build a machine to take you to both the right place and time, you're going to have to roll up your sleeves and get to the very limits of technological prowess you can imagine. (see the Endgame Goals tab when you're ready)",
    "global_share": false,
    "icon": null,
    "is_global": null,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "Gen XXXXXXXXXX...",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    280
  ],
  "rewards": [],
  "tasks": []
}
